# vtracercpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
shared/: CMakeLists.txt  file.cpp  file.h  math.cpp  math.h  output.cpp  output.h  queue.h  stb_image.h  std_ext.cpp  std_ext.h  time.cpp  time.h  types.h
viewer/: CMakeLists.txt  viewer.cpp  vtracer.cpp  vtracer.h
wrapcv/: CMakeLists.txt  common.h  wrapcv.cpp  wrapcv.h
wrapcv/opencv2/: otocv.vcxproj.txt
wrapcv/opencv2/core/src/: arithm.cpp  gl_core_3_1.cpp  glob.cpp  gpumat.cpp  mathfuncs.cpp  parallel.cpp  persistence.cpp  precomp.hpp  system.cpp
wrapcv/opencv2/dynamicuda/: dynamicuda.hpp
wrapcv/opencv2/imgproc/src/: contours.cpp  generalized_hough.cpp  precomp.hpp  smooth.cpp
